Cycles MetalRT: Deleting all objects in scene results in Blender crash #118514

Closed
opened 2024-02-20 15:41:37 +01:00 by Alaska · 1 comment
Member

System Information
Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-02-20 12:18, hash: 148cad93e364
Broken version: 4.0.2
Broken version: 3.6.8
Broken version: 3.5.1
Broken version: 3.4.1
Worked: 3.3.1

Short description of error
If MetalRT is active, and the user is in rendered viewport mode, and they delete all mesh objects in the scene, then Blender will crash.

This issue is similar to #112983 but will probably need to be fixed separately.

Exact steps for others to reproduce the error

  1. In preferences enable a Metal GPU for use by Cycles.
  2. Enable MetalRT.
  3. Enter rendered viewport mode, using the GPU for rendering in the Cycles render engine.
  4. Delete all mesh objects. Blender should crash.
**System Information** Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-02-20 12:18, hash: `148cad93e364` Broken version: 4.0.2 Broken version: 3.6.8 Broken version: 3.5.1 Broken version: 3.4.1 Worked: 3.3.1 **Short description of error** If MetalRT is active, and the user is in rendered viewport mode, and they delete all mesh objects in the scene, then Blender will crash. This issue is similar to #112983 but will probably need to be fixed separately. **Exact steps for others to reproduce the error** 1. In preferences enable a Metal GPU for use by Cycles. 2. Enable MetalRT. 3. Enter rendered viewport mode, using the GPU for rendering in the Cycles render engine. 4. Delete all mesh objects. Blender should crash.
Alaska added the
Priority
Normal
Type
Report
Status
Needs Triage
Platform
macOS
labels 2024-02-20 15:41:46 +01:00
Member

@Michael-Jones hi, can you check?

@Michael-Jones hi, can you check?
Pratik Borhade added the
Module
Render & Cycles
label 2024-02-21 04:57:47 +01:00
Brecht Van Lommel added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-02-29 14:46:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-29 17:28:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118514
No description provided.