Fix #118514: Cycles MetalRT crash with empty scene

Pull Request: https://projects.blender.org/blender/blender/pulls/118907

Pull Request: https://projects.blender.org/blender/blender/pulls/127500